<resources>
    <string name="app_name">TeamBuilder</string>
    <string name="hello_world">Hello TeamBuilder App!</string>
    <string-array name="spSkillLevelEntries">
        <item>Amateur</item>
        <item>Average</item>
        <item>Profi</item>
    </string-array>
    <string name="drawerOpen">Drawer open</string>
    <string name="drawerClose">Drawer close</string>
    <string name="btnGenerateTeams">Generate teams</string>

    <!--create person activity-->
    <string name="btn_create_text">Create member</string>
    <string name="tv_surname_text">Surname</string>
    <string name="tv_firstname_text">Firstname</string>
    <string name="tv_age_text">Age</string>
    <string name="tv_skilllevel_text">"Please define team member's skill level."</string>
    <string name="btn_delete_text">Delete Member</string>


    <!-- Impressum -->
    <string name="txt_impressum_headline">Über TeamBuilder</string>
    <string name="txt_impressum_name">Team Builder</string>
    <string name="txt_impressum_version">Version 0.1</string>
    <string name="txt_impressum_author">by Michael Widlok</string>


    <!--Bundle Keys-->
    <string name="statuscode">statusCode</string>
    <string name="resultview_result_text">TeamBuilder Result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello main fragment</string>
    <string name="team_result_persons_in_team1">Team 1:\n</string>
    <string name="team_result_persons_in_team2">Team 2:\n</string>
    <string name="msg_not_enough_persons_title">Not enough persons</string>
    <string name="msg_not_enough_persons_detail">You must have at least 4 persons created to generate two teams.</string>
    <string name="teamresult_error_bundle_null">The bundle is null. Cannot read event id for creating team result.</string>
    <string name="teamresult_error_not_enough_members">There must be at least 4 members to generate two teams.</string>
    <string name="eventDetail_error_not_enough_members">Your member amount is to small. Please add some more members.</string>
    <string name="eventDetail_person_deleted_msg">Person successfully deleted.</string>
    <string name="eventDetail_person_edited_msg">Person successfully edited.</string>
    <string name="eventDetail_person_created_msg">Person successfully created.</string>
    <string name="create_person_update_btn">update</string>
    <string name="create_person_data_needed_msg">Please type in the requested data before saving this person.</string>
    <string name="app_title">TeamBuilder</string>
    <string name="frg_tag_main">MAIN_FRAGMENT</string>
    <string name="frg_tag_event_detail">EVENT_DETAIL_FRAGMENT</string>
    <string name="frg_tag_team_result">TEAM_RESULT_FRAGMENT</string>
    <string name="frg_tag_person_detail">PERSON_DETAIL_FRAGMENT</string>
    <string name="frg_tag_create_person">CREATE_PERSON_FRAGMENT</string>
    <string name="navItemTitle_settings">Settings</string>
    <string name="navItemTitle_about">About</string>
    <string name="event_detail_msg_no_members">At the moment there are no event members created.</string>
    <string name="error_msg_invalid_data">This dataset is invalid.</string>
    <string name="result_btn_text_finish">Finish</string>
    <string name="main_no_events_available_msg">At the moment there are no events created. Click on the button below to create one.</string>
</resources>
