<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mwidlok.teambuilder.CreatePersonFragment">


    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.mwidlok.teambuilder.CreatePersonActivity">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="201dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="72dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="72dp" />

        <Spinner
            android:id="@+id/spSkillLevel"
            android:layout_width="307dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.173"
            app:layout_constraintTop_toBottomOf="@+id/txtAge">
        </Spinner>

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:text="@string/tv_age_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/tv_firstname_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:text="@string/tv_surname_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtAge"
            android:layout_width="201dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
            android:layout_marginRight="72dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="72dp" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="201dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            android:layout_marginRight="72dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="72dp" />

        <Button
            android:id="@+id/btnSaveMember"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="348dp"
            android:text="@string/btn_create_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="313dp"
            android:layout_height="21dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_skilllevel_text"
            app:layout_constraintBottom_toTopOf="@+id/spSkillLevel"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAge"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnDeleteMember"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_delete_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSaveMember" />

        <TextView
            android:id="@+id/tvPersonInfo"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSkillLevel" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
